# ChangeLog for sys-apps/kexec-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/kexec-tools/ChangeLog,v 1.62 2014/07/10 06:11:15 jlec Exp $

*kexec-tools-2.0.7 (10 Jul 2014)

  10 Jul 2014; Justin Lecher <jlec@gentoo.org> +kexec-tools-2.0.7.ebuild:
  Version Bump, #516778

  28 Dec 2013; Justin Lecher <jlec@gentoo.org> kexec-tools-9999.ebuild,
  files/kexec.init-9999:
  Propagate changes to live ebuild

*kexec-tools-2.0.4-r3 (28 Dec 2013)

  28 Dec 2013; Justin Lecher <jlec@gentoo.org> +kexec-tools-2.0.4-r3.ebuild,
  +files/90_kexec:
  Add postinst script for installkernel(8), #491044

  12 Nov 2013; Justin Lecher <jlec@gentoo.org> kexec-tools-2.0.4-r1.ebuild,
  kexec-tools-2.0.4-r2.ebuild, kexec-tools-9999.ebuild:
  Fix missing deps and inter USE dependencies, thanks Arfrever spotting this

  12 Nov 2013; Justin Lecher <jlec@gentoo.org> kexec-tools-2.0.4-r1.ebuild,
  kexec-tools-2.0.4-r2.ebuild, kexec-tools-9999.ebuild,
  +files/kexec-tools-2.0.4-out-of-source.patch:
  Readd USE=zlib and fix out-of-source build, #490326

  11 Nov 2013; Justin Lecher <jlec@gentoo.org> kexec-tools-2.0.4-r1.ebuild,
  kexec-tools-2.0.4-r2.ebuild, kexec-tools-9999.ebuild:
  Drop USE=zlib as it is always requiered, #490326

  01 Nov 2013; Agostino Sarubbo <ago@gentoo.org> kexec-tools-2.0.4-r2.ebuild:
  Stable for x86, wrt bug #486308

  20 Oct 2013; Pacho Ramos <pacho@gentoo.org> kexec-tools-2.0.4-r2.ebuild:
  amd64 stable, bug #486308

  27 Sep 2013; Mike Frysinger <vapier@gentoo.org> files/README.Gentoo,
  files/kexec-tools-2.0.0-respect-LDFLAGS.patch:
  Tweak patch so we use CFLAGS when linking.

*kexec-tools-2.0.4-r2 (21 Sep 2013)

  21 Sep 2013; Justin Lecher <jlec@gentoo.org> +kexec-tools-2.0.4-r2.ebuild,
  kexec-tools-9999.ebuild, -files/kexec.conf-2.0.3, -files/kexec.init-2.0.3,
  +files/kexec.init-2.0.4-r2, +files/kexec.conf-9999, +files/kexec.init-9999,