@@ -15,29 +15,31 @@ AUX kexec.init-9999 3621 SHA256 02178a7733a08dc6e14082a56d5dd3f12ab58749e8fa16b2
 AUX kexec.service 407 SHA256 d95610609301d46e0f67efd78653beabd7dd253d2bf00f5736de5cdfbf2ea94e SHA512 9f0fa6d39c67048fe774fee0f2e8ed10e9e12a2468e7dda193cd8c5bd8b4cf49819d14703efad35c91265cd4e03c6f5460934b5fe92efd06eab8dc619920b1e3 WHIRLPOOL 9a412481d729e7ec7cec3a4142f2159337d61baf22431e4129f1e7798bf2683f1802e51edc92800e6b42b8b9b01cd83ef51f67cbc1cb7a4b209f923f3180948f
 DIST kexec-tools-2.0.4.tar.xz 271604 SHA256 e5f5ab00d746eb15b4714eca6a8ec5a1a86a62ce2bbdad1b3000161138a978c6 SHA512 2514f407d9150d2615dffc91a525fb28f159bef92b9543f9802e2618746b7d4c04137668ad8a8d8f0b75f68ed9057d09629ce736b6a061b5cf817b9d904f549e WHIRLPOOL 70ad298512e700cd1cdee7698e4fa68a769d91d3080d5d8387b8362ad49126ad68b0b6dbd1f13305958bdc988f805fa610e487682fd0eb5e4e9bcda0a9022627
 DIST kexec-tools-2.0.7.tar.xz 271652 SHA256 13f6e0c088b991955caa47db6a177989519ab1508db6f991e27c19ab6ac8b072 SHA512 9a3c30306851aa27913dcf07fe41b2a864147f9ab4b40fb60291c41bb20115b4840a9d248970f6974b947b8e84efca44ff5af3d78f49e053c141722b57a3c96d WHIRLPOOL 3f5b529b15337df8478d1f19a7c4ddce1869c5a25f1cee8fd8447477be81a936bbc4aa5a11bccb8dfbb909dfdabba59421a4f83e1965b410a41465ba2ab9ccb5
+DIST kexec-tools-2.0.8.tar.xz 272648 SHA256 f3abe96fa0793e63936725a4471429f070039a1e81e605deb378747194a50c47 SHA512 94d715cdf779802308f5f8a0bdfae55c1798cc515fd322a490e8b5414763ab4fa924930022baa0689cd001c2431aef4f28f18b3c7b0b7000cdfaa1a159ad5251 WHIRLPOOL 8d13239e153dded9a98f847101d5581fed8e5a51a17961d6156f0135642e589b7e766ecaeef439fca2b69d4a2bc8e8d3f681a78f28d35acf03bc8d6c06f8ab9e
 EBUILD kexec-tools-2.0.4-r1.ebuild 1309 SHA256 01e67d37075c26fe7ad3fdf36eda8325ee9410e6de2af9aabdac6cb00c11861e SHA512 da5676f92d6f50aed28ae7542079cf8b04e3c4c1aa91844959a27951e2474bc9afa2ad3c8298eb3eeea8975f678047abb86781dd83b4292f4c4bc6581ddb70e4 WHIRLPOOL d75b93f55c6a1490116751cf440d62f57fbb283ad2f08eb004a0eb38fd2d5dc829ef0068c56e2611ec8feda69791630de18c99e0412435784dbff8aca7114c69
 EBUILD kexec-tools-2.0.4-r2.ebuild 1759 SHA256 aa03fdec552c341d722dd131020c7a8066edf952c5f1837837204c9d266aa83b SHA512 4dd0a8dd83c2f17859d39c0073a215e95fd1927ea403da974a4665605744518c76e2df9dee0bd12a0c68fdcb4f181f5cc5a93d626a57c3df0b2ef8555442e15a WHIRLPOOL cd2c9b2e3f8569a9c17e9291dc624b9f2746d6d91c35987fdff91537b848794fef194a7056f7ad3c39dee34f4158996c2e998a592c0864d31708312e5df90788
 EBUILD kexec-tools-2.0.4-r3.ebuild 1826 SHA256 3acfb12622f4c71d5982a1eff983b4c85eda06cc87c70bede0ac82ecff35a4e0 SHA512 1f019179c31d676be33577df1d78a60055de9aabfec6815c64e5b1c7e1753bcb7aa06ae900151ba634111061a53ef56a8259c43abda781938d16d001e2e7d7fc WHIRLPOOL 14ef3c5b36ec443dbae25c6df87ef702a5e7d8c711edde2e7798dcbc51912e80277fcc1a6a6796c1322cc461c94f9cccb03ec9ceb3e2cb802b806b2169fa4ac3
 EBUILD kexec-tools-2.0.7.ebuild 1787 SHA256 227432527cc2165f69037438ca1dff5b84e106d51b2cdfbb55eab48caaea3182 SHA512 491670d0c5c382c0c30ea9b24ea47d44c920a4d85c30d248636073ec03a08d1f8989e37ffc4e7c14384af04913037f55f49b18454885d154ad38f6bbdf49c165 WHIRLPOOL 5c074e50fe1c94a8a4f07eea1cd6392f5e60f2a083c7d18939a32c920726f832e300f6629297e31370dc9bd9be4051dc3e37e8a28c51b6905050702f36671176
+EBUILD kexec-tools-2.0.8.ebuild 1787 SHA256 589f6188d6f56ee44c4c749121012611d3c3b9f869287163732930370edda65c SHA512 11887198b9ef47b3fe6283650e7fe03e0bf289e94023cc660e5ac39bb324410a969d911aaad0892140216342c2f8b978e7b179a20a5591f5cf63ab4cc2a46f87 WHIRLPOOL 28a901c6376fc17778ca014e6239de2b4f8aaa4627574c9af93c235bbe00cd25952fd862147d5e42ffe5363a854c5570a1e7eb053c6d65ecb0b057d1003edf62
 EBUILD kexec-tools-9999.ebuild 1833 SHA256 4aa2f209d4b4ee34193c2393f6c87f6e82b26dbe6bc368de46c605f6ff3c9a9b SHA512 f75ac1914b4216f85453abb29d716b5ab6ca611514639951ab245caac3c87fb5cd790f525d417c5f4cd8f46893c8db623f7f3873da51f070b5837a3a4d2db331 WHIRLPOOL 9971dd2a39147a599a793181d2b419a6219a06cda823657ee3f79f6da8f61c875c0bb69c41086d0539522ab66ae2618bd261f7a9335b5223b8f4af61f4980a25
-MISC ChangeLog 12942 SHA256 92b20d35ee4f441e9104ccfab01956789338b6060fcdf5d234bbbc4f7d615845 SHA512 56dae5b7b03e6b4ff4da92983d4b2899d67f9066f0a6811747e2975df10656f7840839718d1df333eef1d0a89e9291b3b5487732f9c074316e4e57561ca03a53 WHIRLPOOL 44ea12ed9a48cdc580cdd25d42e1aeaff6607611deebd53ddf29634a7d9f8000b4c66495f641e4d1b4b2cb4e7acb5db8b2187dbf4a06ffb6be8f7f454f4da462
+MISC ChangeLog 13075 SHA256 502fe4187f2fff0cc53a85097e5127c953af910fc105c7135f4e7f29bca4dc06 SHA512 dfc7ca5d0bd174ac8a4fc08bf47cac4f89c12227721112bbf5644fb05eefac2a156ffd2a57dd3cbfe25824c01f0d3c2fab91206fcde346b7051476e40ea67e31 WHIRLPOOL c39186720b4895da1c62d984c9fc87154fe12685647f35d056eb44b188cf70c6199b440e350e18deedf4acf7708e1b97c1afb12679e77b2b1c4a3bce7a4e0ecd
 MISC metadata.xml 459 SHA256 9d84c6af2cbf56cf70a11bf399f623133b5da428fd00b6921e512195bce98c36 SHA512 c4def015a91deea9e8ca7269758d6d00d2d67ea242b33ffa327a0776f7c8a89d63890bd45d2377fdcbaa9f57f832418eed6bb543c58c1fd0ba5ca3fdb4987dba WHIRLPOOL 6218bde0407385cb46fc9d469e965f4933562f9be640916a882b21a8c7fbedb00ab12b466c660a1dc2354e5259ddecae01724ebac5eadfdf4bc385e5be2fe121
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJTvi6EXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJUTRi4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirUQkP/jx1WuGXPxW4wpEzBjw+8PZL
-KWsWrchdFmQM1voQE78XSGBOVrYSgn6FlOdsUsSy174/LklEPCU1Y3SA1D5LFKdc
-ZkC3mXAmmvYxxjj2yoGujGlUeiDD1w8WewQvQGnagdDJJ0bx51xQpM1PTEMR53dS
-FsnHfJeRh76a7uc+Ufa4rpJoH+1EvqbHgpmm95SRlWbxWMGO7EI2kKR18w3kmABs
-GHpCIjhPTmgHtBkTqVQp6efTS5j/JmuhRdvkftuf3y0Dblc6zogO9HSdnnIWrufK
-81Tum7V9qOX4QZLbsrcsm8DkFjOIfbWrXS0taW5f1gnDCzpC2n+Mx3ujtPSgLqu3
-h6i8ZYJzajydGtX2y4Gqhtb/DEiEYjuIWAupr/7lVKmUWJNw2x8Psf/EmPtCglHE
-S1KwVCfs8NDX0FPiT5mOPgjR3mv+6Mj1LRhpOPBaMECr9d6H/Wp2Pe98M0ftQhLt
-a7p1E9UbMEybl/2wU32ozk/xrgAlmQQp15EzHAkFOBrtAGTprk4vIhGFF9iEfz08
-o2A9AgrKQiJw+KCZiaZRQ/gaLyfu/bJ3rTVtnIwYr/dITE77zfYdfucHoJN4zpOI
-X6NFw15DOSRk9ixCEPIPO8aYhzSj3Da65kCVjIYJRG8DaIqhM++V9doh9WRj6W+u
-NAD8CvoIFQcXuxr6WaYd
-=IxuE
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir+hAP/Rtbc1PPycOorxHflfXz48Um
+e4jMJjlFzt9Xi9mAAqgafb44uniz0a08xNEPHYSWaQsm9RxKNBDp/uh5dPUOgIIm
+XrZEhtgm30USjWce8hj0/gAsn1SN50xvcDzF4VygwPo8VZM6LNymNvqf/viX4P84
+nA/JSm6XcX1OjDv4HSYPs+cYIKGbFHDQsqD1EWPSGfqV+yQKB5ETlGGcqq6CQ6Nx
+CZ2Adl7/RGxSGukKNTqiwnNyNnTJAeh9QbiLpYAGIkEzVsdw967KHKW5hiMmr1Lm
+RNrTts9G23WYu0Xxei3fWHvH2TBRDO0a+ee1NrC306eqcAVReBf9fn0ifyWTn+ob
+yH1HCF5YWKH67LSLgS8fLucu9PawSyv3KV36L3JLiHKXsMrAXKk00S4avo55UZ+2
+FViwI+jEDw0dNpD5AKK9hmHbzKjdAgZ7Ohd/pU1SxwDRh2FMvcVHDPELUdzheInA
+ru05aaX+NRR179TM0s6crsdQATDvl/jTfqubO648xcaYryZiToMhrw62hU2mft5+
+TjGuyayTiy/RVfdsYq6jEVDHQG0FOlSWJxA3rVOHLbElJ2G2ARHlTp2FpLNGp5Qm
+sosv4Br48hz0AYA1jn+B2sNr2KSdo37NAFr8pDk4a3AxBNTM8CCb7aS+LuJ+ulEm
+ZkC+pcGKdoPVEgH/LJtd
+=msRN
 -----END PGP SIGNATURE-----
